--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -28,12 +28,12 @@ fr:
   bought_price: Prix net
   sell_price: Prix
   margin: Marge
-  unit_price: Prix unitaire
+  unit_price: Prix unit.
   gross_cost: Total HT
   total_gross: Total HT
   provider_name: Fournisseur
 
-  hourly_rate: Taux horaire
+  hourly_rate: Taux hor.
   coefficient: Coefficent
   duration: Durée
   status: Statut
@@ -107,6 +107,7 @@ fr:
       assigned_project: "Attribué (projet)"
       quotation: "Devis"
       accepted: "Accepté"
+      bin: "Corbeille"
   activerecord:
     attributes:
       user:
@@ -324,6 +325,7 @@ fr:
   assigned_customer: "Attribué (client)"
   assigned_project: "Attribué (projet)"
   accepted: "Accepté"
+  bin: "Corbeille"
   phone_number: "Téléphone"
   invoice_project: "Facturer"
   do_done: "Terminer"
@@ -348,3 +350,5 @@ fr:
   create_new_customer: "Créer un nouveau client"
   invoice_notice: "Le montant de la facture est payable dans les 8 jours. Toute réclamation devra être formulée au plus tard dans les huit jours de la réception par lettre recommandée. En cas de retard de paiement, un intérêt de 1% par mois est dû de plein droit, ainsi qu'une indemnité égale à 15% du montant de la facture avec un minimum de 50€, sans sommation ni mise en demeure. Pour tous litiges, seuls les tribunaux de Liège sont compétents."
   invoice_account: "Les paiements se feront au compte BNP Fortis :"
+  total_duration: "Durée totale"
+  showInQuot: "Afficher dans devis"
