Semantic UI 70% - Dashboard

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -352,3 +352,4 @@ fr:
   invoice_account: "Les paiements se feront au compte BNP Fortis :"
   total_duration: "Durée totale"
   showInQuot: "Afficher dans devis"
+  edit: "Editer"
