--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -348,8 +348,11 @@ fr:
   create_new_invoice: "Créer une nouvelle facture"
   create_new_extra: "Créer un nouvel article"
   create_new_customer: "Créer un nouveau client"
-  invoice_notice: "Le montant de la facture est payable dans les 8 jours. Toute réclamation devra être formulée au plus tard dans les huit jours de la réception par lettre recommandée. En cas de retard de paiement, un intérêt de 1% par mois est dû de plein droit, ainsi qu'une indemnité égale à 15% du montant de la facture avec un minimum de 50€, sans sommation ni mise en demeure. Pour tous litiges, seuls les tribunaux de Liège sont compétents."
-  invoice_account: "Les paiements se feront au compte BNP Fortis :"
   total_duration: "Durée totale"
   showInQuot: "Afficher dans devis"
   edit: "Editer"
+  PO: "#PO"
+  applicant: "Demandeur"
+  total_invoiced: "Total facturé HTVA pour ce segment"
+  quotation_account: "Les paiements se feront au compte CBC :"
+  quotation_notice: "Pour plus d'information sur ce devis, vous pouvez nous contacter directement : philippe@plusview.be ou 0476 43 30 04. Nous vous remercions de votre confiance."
